--- a/root/chart_example_from_d3-graph-gallery.html
+++ b/root/chart_example_from_d3-graph-gallery.html
@@ -6,6 +6,7 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
+<h2>Hi Test this</h2>
 <div id="my_dataviz"></div>
 
 
