--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Create a div where the graph will take place -->
 <h2>Hi Test this....</h2>
+<h3>Another Test</h3>
 <div id="my_dataviz"></div>
 
 
